Fixed layout issues

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -7,8 +7,8 @@
     grid-template-rows: 1fr;
     background-color: #6f0707;
     color: white;
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     z-index: 2;
     height: fit-content; /*var(--navbarHeight);*/
     width: 100%;
@@ -33,7 +33,7 @@
 } */
 
 .rightHeaderSpan {
-    z-index: 100000;
+    z-index: 300;
     display: flex;
     flex-direction: row;
     column-gap: 0.5rem;
